# chatgpt-telegram-bot

./: .repit  Dockerfile  pyproject.toml  requirements.txt  translations.json
bot/: openai_helper.py
